--- a/sgfr/style.css
+++ b/sgfr/style.css
@@ -5,9 +5,8 @@ body {
 	background: #888 url("img/bg.png");
 	margin: 0;
 	padding: 0;
-	font-family: "Tahoma", sans-serif;
+	font-family: "Montserrat", "Tahoma", sans-serif;
 	color: black;
-	width: 100vw;
 }
 #container {
 	max-width: 1024px;
@@ -31,7 +30,7 @@ body {
 	display: block;
 	color: black;
 	font-size: large;
-	font-weight: bold;
+	font-weight: 700;
 	text-transform: uppercase;
 	padding: 29px 29px 29px 0px;
 	text-decoration: none;
@@ -102,6 +101,7 @@ body {
 }
 .rs-id {
 	font-size: large;
+	font-weight: 300;
 }
 .new:after {
 	content: "NEW!";
@@ -111,8 +111,8 @@ body {
 	color: white;
 	padding: 3px;
 	border-radius: 5px;
-	font-weight: bold;
+	font-weight: 700;
 }
 .rs-name {
-	font-weight: bold;
+	font-weight: 700;
 }
